--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="lg-loading-page"></div>
 </div>
 <script src="//youxi.baidu.com/b83d7a78ba26c52504856e7a947371a6_zepto.min.js"></script>
-
+<script src="//fex.bdstatic.com/staticresource/zepto.min.js">script>
 <script src="//fex.bdstatic.com/h5jscss/af38d567471f1a6bf16ddf56b9bce175_swiper.min.js"></script>
 
 
